fix: add word break styles to container for text wrapping
(cherry picked from commit 0a3087958136fee18dd73630f31c3d83158134c7)

# Conflicts:
#	gravitee-apim-console-webui/src/management/api/documentation-v4/components/documentation-edit-page/documentation-edit-page.component.scss
(cherry picked from commit d5e4f032b5d5b097cd1cf24d007daa019750e509)

# Conflicts:
#	gravitee-apim-portal-webui-next/src/components/page/page-markdown/page-markdown.component.scss
(cherry picked from commit 70ddeba668ed475a7a87666a5c1fc62dc76593fd)

--- a/gravitee-apim-console-webui/src/components/documentation/page/_page.scss
+++ b/gravitee-apim-console-webui/src/components/documentation/page/_page.scss
@@ -383,6 +383,9 @@
 
 .toastui-editor-contents table td {
   border: 1px solid #eaeaea;
+  word-break: break-all; /* Break text at any character, including between letters */
+  overflow-wrap: break-word; /* Ensure text will break in the middle of words if needed */
+  white-space: normal;
 }
 
 .toastui-editor-contents table th {
